--- a/assets/index.css
+++ b/assets/index.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
 }
 
 nav {
@@ -39,6 +42,10 @@ main {
     margin-top: 30px;
     padding: 0px 200px;
     font-size: 1.2rem;
+}
+
+.description p {
+    line-height: 1.8;
 }
 
 .link {
